@@ -70,6 +70,10 @@ quote_name (const char *name)
    This is a generic function; if we end up needing it in other
    programs, we should move it to kpathsea.  */
 
+#ifdef WIN32
+#include <kpathsea/concatn.h>
+#endif
+
 static char *
 selfautoloc_prog (const char *prog)
 {
@@ -87,14 +91,14 @@ selfautoloc_prog (const char *prog)
   while (*r && *r != ' ' && *r != '\t')
     r++;
   if (*r == '\0')
-    ret = (char *)concatn ("\"", selfautoloc, "\\", q, "\"", NULL);
+    ret = concatn ("\"", selfautoloc, "\\", q, "\"", NULL);
   else {
     *r = '\0';
     r++;
     if (*r)
-      ret = (char *)concatn ("\"", selfautoloc, "\\", q, "\" ", r, NULL);
+      ret = concatn ("\"", selfautoloc, "\\", q, "\" ", r, NULL);
     else
-      ret = (char *)concatn ("\"", selfautoloc, "\\", q, "\"", NULL);
+      ret = concatn ("\"", selfautoloc, "\\", q, "\"", NULL);
   }
   free (q);
   free (selfautoloc);
