@@ -1,3 +1,8 @@
+2010-10-02  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* search.c (selfautoloc_prog): #include <kpathsea/concatn.h>
+	for WIN32 and drop cast of concatn() results.
+
 2010-06-19  Yan Li  <yan.i.li@intel.com>
 
 	* tfmload.c (name): increase size to 500.
